UI_ENHANCEMENTS_AND_SEO_CONTENTS

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,218 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <!-- SEO_CONTENTS -->
+      <meta name="keywords" content="
+        End to End development,
+        Modernize Legacy Application,
+        Legacy Software Upgrade,
+        Application Transformation,
+        Legacy System Optimization,
+        Digital Transformation of Legacy Applications,
+        Legacy Application Refactoring,
+        Legacy Application Migration,
+        Legacy System Integration,
+        Legacy Application Enhancement,
+        Legacy Application Support,
+        Legacy Application Maintenance,
+        Legacy Application Modernization Strategy,
+        Legacy Application Reengineering,
+        Legacy Application Lifecycle Management,
+        Legacy Application Revamp,
+        Legacy Application Modernization,
+        IT Consulting for Legacy Systems,
+        Legacy Application Maintenance,
+        IT Legacy System Support,
+        IT consulting services,
+        Technology consulting,
+        IT solutions provider,
+        Managed IT services,
+        Cloud computing services,
+        IT support and maintenance,
+        Data backup and recovery solutions,
+        Software development consulting,
+        IT project management,
+        IT risk management,
+        IT architecture design,
+        Azure Integration Services,
+        Azure Containerization Solutions,
+        Dotnet Application Maintenance,
+        Dotnet Application Development Company,
+        Dotnet Application Performance Tuning,
+        Dotnet Core Development Solutions,
+        Dotnet Framework Support Services,
+        Dotnet Application Architecture Design,
+        NET framework,
+        C# programming,
+        ASP.NET development,
+        .NET applications,
+        MVC (Model-View-Controller) architecture,
+        Windows development with .NET,
+        Angular,
+        Single Page Application (SPA),
+        JavaScript Framework,
+        Frontend Development,
+        Web Development,
+        Angular Components,
+        Angular Directives,
+        Angular Modules,
+        Angular Services,
+        Angular Routing,
+        Angular CLI,
+        TypeScript,
+        SEO-friendly URLs,
+        Progressive Web App (PWA),
+        Server-Side Rendering (SSR),
+        Angular Best Practices,
+        Angular Performance Optimization,
+        Angular SEO Optimization,
+        Angular Development Tools,
+        Angular Libraries,
+        Angular Material Design,
+        Angular Bootstrap,
+        Angular Animation,
+        Angular Forms,
+        Angular Interceptors,
+        SQL Server,
+        SQL Server queries,
+        SQL Server performance tuning,
+        SQL Server optimization,
+        SQL Server backups,
+        SQL Server troubleshooting,
+        SQL Server integration,
+        SQL Server reporting services,
+        SQL Server jobs,
+        Scalability,
+        Agility,
+        Performance,
+        Resilience,
+        Decentralization,
+        Interoperability,
+        Modularity,
+        API-first,
+        Containerization,
+        Fault tolerance,
+        Elasticity,
+        Distributed architecture,
+        Microservices architecture,
+        Continuous integration (CI),
+        Continuous delivery (CD),
+        Reactive programming
+      ">
+        <!-- JSON-LD Structured Data -->
+        <script type="application/ld+json">
+          {
+            "@context": "https://schema.org",
+            "@type": "Organization",
+            "name": "Virtuosoft",
+            "url": "https://www.virtuosoft.com",
+            "logo": "%PUBLIC_URL%/favicon.ico",
+            "description": "A consulting and design firm by Stephen J. Carnam",
+            "keywords": [
+              "End to End development",
+              "Modernize Legacy Application",
+              "Legacy Software Upgrade",
+              "Application Transformation",
+              "Legacy System Optimization",
+              "Digital Transformation of Legacy Applications",
+              "Legacy Application Refactoring",
+              "Legacy Application Migration",
+              "Legacy System Integration",
+              "Legacy Application Enhancement",
+              "Legacy Application Support",
+              "Legacy Application Maintenance",
+              "Legacy Application Modernization Strategy",
+              "Legacy Application Reengineering",
+              "Legacy Application Lifecycle Management",
+              "Legacy Application Revamp",
+              "Legacy Application Modernization",
+              "IT Consulting for Legacy Systems",
+              "Legacy Application Maintenance",
+              "IT Legacy System Support",
+              "IT consulting services",
+              "Technology consulting",
+              "IT solutions provider",
+              "Managed IT services",
+              "Cloud computing services",
+              "IT support and maintenance",
+              "Data backup and recovery solutions",
+              "Software development consulting",
+              "IT project management",
+              "IT risk management",
+              "IT architecture design",
+              "Azure Integration Services",
+              "Azure Containerization Solutions",
+              "Dotnet Application Maintenance",
+              "Dotnet Application Development Company",
+              "Dotnet Application Performance Tuning",
+              "Dotnet Core Development Solutions",
+              "Dotnet Framework Support Services",
+              "Dotnet Application Architecture Design",
+              "NET framework",
+              "C# programming",
+              "ASP.NET development",
+              ".NET applications",
+              "MVC (Model-View-Controller) architecture",
+              "Windows development with .NET",
+              "Angular",
+              "Single Page Application (SPA)",
+              "JavaScript Framework",
+              "Frontend Development",
+              "Web Development",
+              "Angular Components",
+              "Angular Directives",
+              "Angular Modules",
+              "Angular Services",
+              "Angular Routing",
+              "Angular CLI",
+              "TypeScript",
+              "SEO-friendly URLs",
+              "Progressive Web App (PWA)",
+              "Server-Side Rendering (SSR)",
+              "Angular Best Practices",
+              "Angular Performance Optimization",
+              "Angular SEO Optimization",
+              "Angular Development Tools",
+              "Angular Libraries",
+              "Angular Material Design",
+              "Angular Bootstrap",
+              "Angular Animation",
+              "Angular Forms",
+              "Angular Interceptors",
+              "SQL Server",
+              "SQL Server queries",
+              "SQL Server performance tuning",
+              "SQL Server optimization",
+              "SQL Server backups",
+              "SQL Server troubleshooting",
+              "SQL Server integration",
+              "SQL Server reporting services",
+              "SQL Server jobs",
+              "Scalability",
+              "Agility",
+              "Performance",
+              "Resilience",
+              "Decentralization",
+              "Interoperability",
+              "Modularity",
+              "API-first",
+              "Containerization",
+              "Fault tolerance",
+              "Elasticity",
+              "Distributed architecture",
+              "Microservices architecture",
+              "Continuous integration (CI)",
+              "Continuous delivery (CD)",
+              "Reactive programming"
+            ],
+            "sameAs": [
+              "https://www.linkedin.com/company/virtuosoft",
+            ]
+          }
+        </script>
+        
+
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
