--- a/public/index.html
+++ b/public/index.html
@@ -214,7 +214,7 @@
           }
         </script>
         
-
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
